fix(comp:tree): modify tree line spacing (#1839)

--- a/packages/components/tree/style/mixin.less
+++ b/packages/components/tree/style/mixin.less
@@ -2,11 +2,11 @@
 .horizontal-line() {
   height: var(--ix-line-width);
   background-color: var(--ix-color-separator);
-  background-size: 3px 100%;
 }
 
 .vertical-line() {
+  position: absolute;
+  left: calc(var(--ix-font-size-icon) / 2);
   width: var(--ix-line-width);
   background-color: var(--ix-color-separator);
-  background-size: 100% 3px;
 }
